fixed unvisible color and fiexd send report to company

--- a/src/styles/_ui.scss
+++ b/src/styles/_ui.scss
@@ -11,3 +11,7 @@
 .css-b62m3t-container {
 	width: 100%;
 }
+
+.form-label {
+	color: $color-grey-dark-1;
+}
